# students-life

./: .gitignore  .gitmodules  .travis.yml  Button.h  CMakeLists.txt  CMakeSettings.json  Draw_windows.h  Head.h  Header.hpp  Hero.h  Hueta.vcxproj  Hueta.vcxproj.filters  Job_game.h  README.md  Source.cpp  Window.h  event_processor.h  new_job.h  test_json.json  Окна  Характеристики.md
Debug/: Hueta.ilk  vc142.idb
Debug/Hueta.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Hueta.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Everything/: Button.h  Head.h  Source.cpp  Window.h
Release/Hueta.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Hueta.lastbuildstate  Hueta.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
event_processor/: CMakeLists.txt  README.md
event_processor/include/: event_processor.hpp  header.hpp
event_processor/tests/: test.cpp  test2_event.json  test_event.json
include/: Button.h  Draw_windows.h  EventCaller.hpp  Head.h  Head.hpp  Header.h  Header.hpp  Hero.h  Job_game.h  Player.hpp  Progress.h  Relations.h  Settings.h  Shop.h  Time_handler_singleton.hpp  Window.h  event_window.hpp  new_job.h  player.hpp  prepods.hpp  wstr_cast.hpp
json_events/: EventList.json  SPECIAL_death_save_friends.json  SPECIAL_death_save_gf.json  SPECIAL_hello_metoda.json  SPECIAL_hello_student.json  konyak_dlya_avieva.json  med.json  test_json.json  testing_event.json  unexpected_zachet.json
scripts/: tests.sh
tests/: EventCaller_tests.cpp  Time_handler_tests.cpp
tests/json_event_examples/: EventList.json  testing_event.json  unavailable_event.json
